fixed minor styling issues aligned legend pointers for desktop view fixed z-index conflicts with token supply chart

--- a/src/app/email-bar/email-bar.component.scss
+++ b/src/app/email-bar/email-bar.component.scss
@@ -12,7 +12,7 @@
     height: 80px;
     width: 100%;
     background: #FFC107;
-    z-index: 2;
+    z-index: 3;
   }
 }
 
@@ -59,7 +59,7 @@
   box-sizing: border-box;
   border: 1px solid #fff;
   background: rgba(255, 255, 255, 0.5);
-  border-radius: 3em; 
+  border-radius: 3em;
   color: #000;
   line-height: 24px;
   text-align: left;
@@ -68,7 +68,7 @@
 .bee-main-cta-form input:focus {
   outline: 0;
   border-color: #aaa;
-}       
+}
 
 .bee-main-cta-form button {
   width: 120px;
